SONARHTML-330 Clamp rowspan and colspan based on HTML spec